--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,6 @@
             <div id="app"></div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
-        <script type="module" src="js/index.js"></script>
+        <script type="module" src="js/index.tsx"></script>
     </body>
 </html>
