--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,5 @@
     <body>
         <div id="app"></div>
     </body>
-    <script type="module" src="js/index.tsx"></script>
+    <script type="module" src="ts/index.tsx"></script>
 </html>
